--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,15 +4,15 @@
 <html>
   <body>
   
-      <%- include('config/bkgdImg.ejs')%>
+   
       <%- include('config/loadScreen.ejs')%>
     <%- include('config/header.ejs')%>
-    <%- include('config/bkgdImg.ejs')%>
+
     <div class="mainStyle">
       <div class="landingPage"> 
         <div></div>
         <div>
-        <h1 class="h1Span"><%=title%></h1>
+        <h1 class="h1Span"><%=copy.title%></h1>
         <div class="eventBody">
       <p>*We keep info private and do not sell information about our customers</p>
   <form action="/contactform" method="POST">
