--- a/views/config/footer.ejs
+++ b/views/config/footer.ejs
@@ -1,5 +1,4 @@
-<div class="footer" id="footer"><p>W2 Marketing LLC ~ Greeley, CO</p> 
+<div class="footer" id="footer"><p><%=copy.companyName%> ~ <%=copy.companyCity%></p> 
 
  
 </div>
-   
