--- a/public/stylesheets/sook/style.css
+++ b/public/stylesheets/sook/style.css
@@ -12,4 +12,21 @@ body {
   transform: translateX(-100%);
 }
 
+.landingPage {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.eventBody {
+  border: 1px dotted red;
+}
+
+.imgBox {
+  min-width: 100%;
+  min-height: 125px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 /*# sourceMappingURL=style.css.map */
