--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,11 @@
         <%for(let i=0;i<data[2].length;i++){%>
                 <div style="margin-bottom:12%" class="eventBody">  
                 <h1 class="h1Span"><%=data[2][i].introHeader%></h1>
-                <div class="introImgDiv_L">     
+                 
                     <div class="innerDetails"><%=data[2][i].introDetails%></div>
-                    <div><img class="introImg" src="/<%=data[2][i].imgName%>"></div>
+                    <div><img class="images_standard" src="/<%=data[2][i].imgName%>"></div>
                     </div>
-                </div>
+
                 <%}%>
             </div>
      
