--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
             <%- include('config/bkgdImg.ejs')%>            
    
             <%- include('config/header.ejs')%>
-            <div class="introImgDiv_T">    
-                <img class="indexImg" src="/images/logoW2.png">
+           
+                <img class="banner" src="/images/sook_banner.png">
                <h1 class="introType"><%=copy.title%></h1>
               
-        </div>
+    
           
         <div class="landingPage">
         <%for(let i=0;i<data[2].length;i++){%>
