--- a/public/stylesheets/sook/style.css
+++ b/public/stylesheets/sook/style.css
@@ -16,6 +16,11 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+@media (min-width: 900px) {
+  .landingPage {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
 
 .eventBody {
   border: 1px dotted red;
@@ -32,9 +37,34 @@ body {
 .banner {
   width: 100vw;
 }
+@media (min-width: 900px) {
+  .banner {
+    width: 50%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+}
 
 .images_table {
   max-width: 50px;
+}
+
+.midBar {
+  padding: 2%;
+  background-color: black;
+  word-wrap: normal;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.midBar a {
+  color: white;
+  text-decoration: none;
+}
+
+.navBox {
+  border: 1px solid white;
+  min-height: 94%;
+  width: 94%;
 }
 
 /*# sourceMappingURL=style.css.map */
