--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -59,7 +59,7 @@
       <div class="eventBody" id="admin2">
       <table>
         <thead>
-      <th>Blog Title</th><th>Date or Subtitle</th><th>Remove</th>
+      <th>Blog Title</th><th>Date</th><th>image</th><th>Remove</th>
         </thead>
         <tbody>
           <%if(typeof blogs == 'object' && blogs[0]){%>
