--- a/views/config/header.ejs
+++ b/views/config/header.ejs
@@ -8,12 +8,15 @@
 </div>
 </div>
 
-<div id="menuPage">
-    <div class="menuContent">
-        <p><a href="/">Home</a></p>
-        <!--p><a href="/market">Services</a></-->
-        <p><a href="/register">Contact</a></p>
+<div class="midBar">
+    <div class="nav_container">
+      <div class="navBox">  <a href="/">Home</a></div>
+        </div>
 
+     
+        <div class="nav_container">
+      <div class="navBox">  <a href="/register">Contact</a></div>
+    </div>
 
 </div>
 </div>
