--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,27 +26,24 @@
                 <%}%>
             </div>
      
-        <div class="midBar">
-            <div class="midLeft">
-                <div class="landingPage0">
+        <div class="midBar">           
+                <div class="nav_container">
             <a href="/market">     <div class="navBox">
-               <%=copy.companyName%> Home Website
+              Home 
             </div></a>
         </div>
-<div class="landingPage0">
+<div class="nav_container">
    <a href="/about"> <div class="navBox">
-        about this webapp
+       about <%=copy.companyName%>
     </div></a>
 </div>
-<div class="landingPage0">
+<div class="nav_container">
     <a href="/faqs">   <div class="navBox">
         F.A.Q.s
     </div></a>
 </div>
-</div>
-<div class="midRight">
-    
-</div>
+
+
 </div>
 
 <h1 class="h1Span">Latest Developments</h1>
