--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     
-    <%- include('config/head.ejs')%>
+    <%- include('/config/head.ejs')%>
 
- <div class="mainStyle">
  
-    <%- include('config/bkgdImg.ejs')%>
+    <%- include('/config/bkgdImg.ejs')%>
     <%- include('config/header.ejs')%>
     <body>
     <div class="eventBody">
@@ -49,7 +48,7 @@
     </div>
     <div>
       <label >Password</label>
-      <input oninput="checkPasswords" id="password1" name="password" type="password" pattern="(?=.{8}" title="format: " required />
+      <input oninput="checkPasswords" id="password1" name="password" type="password" pattern="?=.{8}" title="format: " required />
     </div>
 
 
@@ -74,7 +73,7 @@
 
 </div>
 </div>
-</div>
+
      
       <%- include('config/footer.ejs')%>
       <!--script src="javascripts/backgroundFX1.js"></script-->
