--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,11 +4,11 @@
 @use'./scrollbar.scss';
 //BRAND COLORS
 $red:rgba(255, 0, 0, 0.674);
-$blue:rgba(205, 202, 241, 0.857);
+$blue:rgba(47, 30, 239, 0.857);
 $green:rgba(174, 241, 165, 0.57);
 $yellow:rgba(255, 242, 0, 0.733);
 $pink:rgba(234, 64, 48, 0.733);
-$grey:rgba(97,97,97,.95);
+$grey:rgba(32, 158, 221, 0.95);
 //TYPEFACE
 @font-face {
   font-family:"combo" ;
