--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,17 +15,11 @@
                   
 <div class="eventBody_about">
     <div class="eventBody">
-            <p> <span class="alert"> W2 Marketing</span> operates as a small specialized team in Greeley, CO</p>
+            <p> <span class="alert"> <%=copy.companyName%></span> of <%=copy.companyCity%></p>
    <p>We Offer:</p>
               <ul>
-                <li>Social media account creation and management (Facebook, Instagram, Twitter, etc.)</li>
-                <li>Content creation and curation</li>
-                <li>Social media advertising (Facebook Ads, Instagram Ads, etc.)</li>
-                <li>Influencer marketing</li>
-                <li>Social media analytics and reporting</li>
-                <li>Community management and engagement</li>
-                <li>Reputation management</li>
-                <li>Social media strategy development</li>
+                <li>ABOUT US RESOURCES FROM DATABASE HERE</li>
+      
 
 <p></p>
 </ul>
@@ -72,13 +66,13 @@
 <div class="mainStyle">
     <div class="eventBody">
         <h2>about this website</h2>
-        <p>This ia a prograssive web application</p>
+        <p>This ia a progressive web application</p>
         <p>Runs in all major browsers with no app store download required</p>
-        <p>Browse anonimously or add to cart by <a href="/login">registering</a> your email with us</p>
+        <p>Browse anonimously or add to cart by <a href="/register/login">registering</a> your email with us</p>
         <p><a href="/register">Contact NoCo MetalWorkz</a>  about Estimates, Product Info, or a custom Design Idea</p>
         <p>Our website offers our guests to browse, save, and purchase custom parts and plasma cuts </p>
-        <h2>Noco Metalworkz Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
-        <a href=""><h2>report app issues to developer</h2></a>
+        <h2><%=copy.companyName%> Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
+        <a href="/tickets"><h2>report app issues to developer</h2></a>
     </div>
     <br>
  
