--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -589,10 +589,22 @@ align-items: center;
   //width: 100%;
   //height:60%;
 }
+#logoDiv{
+  
+  right: 12%;
+  background-repeat: no-repeat;
+  background-clip:unset;
+ background-size: contain;
+   background-position-x: 85%;
+min-width: 20%;
+min-height: 100%;
+}
 .menu{
   position: fixed;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
   min-width: 100vw;
-  
+  padding:1%;
   top:0;
   left: 0;
   display: flex;
