--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,14 @@
     <%- include('config/intro.ejs')%> 
     <div class="eventBody">
        <div class="indexSpacer"></div>
-        <h1 class="h1Span">W2 Marketing Services</h1>
+        <h1 class="h1Span"><%-copy.companyName%> Services</h1>
       
         <div class="invGrid">
             <% for(var i=0;i<data[1].length;i++){%>
                 <div class="gridContain">
                     <div>
-                        <h2><%=data[1][i].name%></h2>
-                        <h3>$<%=data[1][i].price%>.00</h3>
+                        <h2><%=data[1][i].serviceName%></h2>
+                        <h3>$<%=data[1][i].cost%>.00</h3>
                     </div>
                     <div class="imgCont">
                            <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
@@ -34,28 +34,7 @@
             </div>
             <div class="indexSpacerBottom"></div>
         </div>        
-        <div class="midBar">
-            <div class="midLeft">
-                <div class="landingPage0">
-            <a href="/market">     <div class="navBox">
-                W2's Home Website
-            </div></a>
-        </div>
-<div class="landingPage0">
-   <a href="/about"> <div class="navBox">
-        about this webapp
-    </div></a>
-</div>
-<div class="landingPage0">
-    <a href="/faqs">   <div class="navBox">
-        F.A.Q.s
-    </div></a>
-</div>
-</div>
-<div class="midRight">
-    
-</div>
-</div>
+     <%- include('./config/navBar')%>
 
 <h1 class="h1Span">Latest Developments</h1>
 <div class="landingPage">  
