--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -55,6 +55,30 @@
     </div>
  </div>
 <!---->
+<div class="mainStyle">
+  <h1 class="h1Span">Live IntroContent</h1>
+  <div class="eventBody" id="admin2">
+  <table>
+    <thead>
+  <th>Intro Title</th><th>Date or Subtitle</th><th>Remove</th>
+    </thead>
+    <tbody>
+      <%if(typeof data == 'object' && data[0]){%>
+      <% for(var i=0; i<data.length;i++){%>
+      <tr>
+          <td><%= data[i].bTitle %></td>
+          <td><%= data[i].bSubtitle%></td>
+          <td><img src="<%= data[i].imgName%>" alt=""></td>             
+          <td><form action="/delIntro" method="post">
+              <button onclick="loading('deleting blog')" name="introDelete" value="<%= data[i]._id%>"> delete</button>
+               </form></td>
+       </tr>
+      <% } %>
+      <%}%>
+    </tbody>
+  </table>
+ </div>
+</div>
   <div class="mainStyle">
       <h1 class="h1Span">Live Posts</h1>
       <div class="eventBody" id="admin2">
