--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -25,7 +25,7 @@ $grey:rgba(32, 158, 221, 0.95);
 }
 $fontMain:"combo";
 $fontSecondary:"righteous";
-//COLOR EXTENDORS
+/////////COLOR EXTENDORS
 $transparent:rgba(0,0,0,0);
 $accent:#dcf6ff;
 $error:red;
