--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,6 +35,7 @@
   <h2>
     Register Email:
   </h2>
+
   <form action="/regUser" method="post">
     <div>
       <label>Name</label>
@@ -75,7 +76,7 @@
      
       <%- include('config/footer.ejs')%>
       <!--script src="javascripts/backgroundFX1.js"></script-->
-      <%- include('./config/baseScripts.ejs')%>
+      <%- include('config/baseScripts.ejs')%>
    <script src="javascripts/login.js"></script> 
 
     </body>
