--- a/views/config/header.ejs
+++ b/views/config/header.ejs
@@ -14,13 +14,12 @@
         <p><a href="/">Home</a></p>
         <p><a href="/market">Services</a></p>
         <p><a href="/register">Contact</a></p>
-        <p><a href="/register/login">Login</a></p>
     <% if (typeof user == 'object' && user) { %>
         <p> <a onclick="loading('logging out')" href="/auth/logout">Logout</a></p>
         <div><img onclick="getCart()" class="cartIcon" src="/images/icons/cart.png"></div>
         <%}else{%>
-            <p><a href="/login">Sign in</a></p>
-            <div><a href="/login"><img class="cartIcon" src="/images/icons/cart1.png"></a></div>
+            <p><a href="/register/login">Sign in</a></p>
+            <div><a href="/register/login"><img class="cartIcon" src="/images/icons/cart1.png"></a></div>
     
     <%}%>
 
