--- a/views/config/header.ejs
+++ b/views/config/header.ejs
@@ -18,8 +18,8 @@
         <p> <a onclick="loading('logging out')" href="/auth/logout">Logout</a></p>
         <div><img onclick="getCart()" class="cartIcon" src="/images/icons/cart.png"></div>
         <%}else{%>
-            <p><a href="/register/login">Sign in</a></p>
-            <div><a href="/register/login"><img class="cartIcon" src="/images/icons/cart1.png"></a></div>
+            <p><a href="/login">Sign in</a></p>
+            <div><a href="/login"><img class="cartIcon" src="/images/icons/cart1.png"></a></div>
     
     <%}%>
 
