--- a/public/stylesheets/sook/style.scss
+++ b/public/stylesheets/sook/style.scss
@@ -9,7 +9,7 @@ $transparent:rgba(0,0,0,0);
 $error:red;
 
 
-//***********************MAIN APP STYLES****************//
+/////***********************MAIN APP STYLES****************//
 body {
   margin: 0;
   padding: 0;
