--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,7 +9,7 @@ $green:rgba(174, 241, 165, 0.57);
 $yellow:rgba(255, 242, 0, 0.733);
 $pink:rgba(234, 64, 48, 0.733);
 $grey:rgba(97,97,97,.95);
-//TYPEFACE
+////TYPEFACE
 @font-face {
   font-family:"combo" ;
   src: url('../fonts/Grotesque/DarkerGrotesque-Light.ttf');
