--- a/views/config/404.ejs
+++ b/views/config/404.ejs
@@ -23,7 +23,7 @@
     <a href="/">   <div class="navBox">
         home
     </div></a>
-<%= copy.custom404Message&>
+<%= copy.custom404Message%>
 </div>
 <%- include('footer.ejs')%>
 </div>
