--- a/views/market.ejs
+++ b/views/market.ejs
@@ -31,7 +31,7 @@
                                 <h4><%=data[1][i].terms%></h4>
                             </div>
                             <div class="imgCont">
-                                   <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
+                                   <a onclick="loading('getting product details')" href="/market/productID/<%= data[1][i]._id%>"> 
                                  <img class="invImg" src=" <%= data[1][i].imgName%>" alt="">
                                 </a>
                                </div>
