--- a/views/config/bkgdImg.ejs
+++ b/views/config/bkgdImg.ejs
@@ -1,1 +1,2 @@
-  <img id="bkgrdImage" class="okImg"src="/images/constructionBkgrd.png" alt="W2 Marketing Greeley, CO">
+  <!--img id="bkgrdImage" class="okImg"src="/images/constructionBkgrd.png" alt="W2 Marketing Greeley, CO"-->
+  <video  autoplay muted loop id="bkgrdImage" class="okImg"src="/images/rainbow_animation.mp4" alt="W2 Marketing Greeley, CO"></video>
