--- a/public/stylesheets/sook/style.scss
+++ b/public/stylesheets/sook/style.scss
@@ -49,7 +49,7 @@ $textAltColor:white;
     margin: 0;
     padding: 0;
     //font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background-color:black;
+    background:linear-gradient(to right,$red,$yellow, $green,$blue);
     color: $textAltColor;
   }
 
@@ -287,7 +287,7 @@ min-width: 100vw;
   }
 }
 //background Img Style
-img.okImg{
+img.okImg,video.okImg{
   animation: 120s ease-in-out infinite slowMove;
   position:fixed;
   top: 0;
