--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
                   
 <div class="eventBody_about">
     <div class="eventBody">
-            <p> <span class="alert"> <%=copy.companyName%></span> of <%=copy.companyCity%></p>
+            <p> <span class="alert"> <%=options.companyName%></span> of <%=options.companyCity%></p>
    <p>We Offer:</p>
               <ul>
                 <li>ABOUT US RESOURCES FROM DATABASE HERE</li>
@@ -71,7 +71,7 @@
         <p>Browse anonimously or add to cart by <a href="/register/login">registering</a> your email with us</p>
         <p><a href="/register">Contact NoCo MetalWorkz</a>  about Estimates, Product Info, or a custom Design Idea</p>
         <p>Our website offers our guests to browse, save, and purchase custom parts and plasma cuts </p>
-        <h2><%=copy.companyName%> Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
+        <h2><%=options.companyName%> Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
         <a href="/tickets"><h2>report app issues to developer</h2></a>
     </div>
     <br>
