--- a/views/invoiceViewer.ejs
+++ b/views/invoiceViewer.ejs
@@ -48,8 +48,8 @@
     <div class="eventBody">
     <p>We offer the following payment options:</p>
     <ul>
-        <li>Mail by check: Payable to <%= copy.comapnyName%>, c/o: <%=copy.companyContact%>, Mail to: 1536 14th AVE ~ Greeley, CO 80631</li>
-        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to:<%copy.companyPaypal%></li>
+        <li>Mail by check: Payable to UPDATE QUERY SCOTT, c/o: UPDATE QUERY SCOTT, Mail to: 1536 14th AVE ~ Greeley, CO 80631</li>
+        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to:UPDATE QUERY SCOTT</li>
     </ul>
     <p>if you have any questions abour invoicing, payment, or you may have seen a bug in this new service, all feedback helps, please let me know!! -scott</p>
     <p>"version": "1.0.9"</p>
