--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,10 @@
     <%- include('config/intro.ejs')%> 
     <div class="eventBody">
        <div class="indexSpacer"></div>
-        <h1 class="h1Span"><%-copy.companyName%> Services</h1>
+        <h1 class="h1Span"> Services</h1>
       
         <div class="invGrid">
+            <%if(typeof data[1] == 'object'&& data[1]){%>
             <% for(var i=0;i<data[1].length;i++){%>
                 <div class="gridContain">
                     <div>
@@ -29,22 +30,25 @@
                        </div>
                 </div>                
                  <%}%>
+                 <%}%>
 
                
             </div>
             <div class="indexSpacerBottom"></div>
         </div>        
      <%- include('./config/navBar')%>
-
+     
+     <%if(typeof data[0] == 'object'&& data[0]){%>
 <h1 class="h1Span">Latest Developments</h1>
 <div class="landingPage">  
-        <% for(var i=0;i<data[0].length;i++){%>
+    <% for(var i=0;i<data[0].length;i++){%>
             <div class="eventBody">
                 <h1 maxlength="20"><%= data[0][i].bTitle%></h1>
                 <h2 maxlength="20"><%= data[0][i].bSubtitle%></h2>
                 <div style="background-image:url('<%= data[0][i].imgName%>');" class="imgBox"></div>
                 <p><%= data[0][i].bDetails%></p>
             </div>
+            <%}%>
             <%}%>
         </div>
    
