--- a/views/config/bkgdImg.ejs
+++ b/views/config/bkgdImg.ejs
@@ -1,6 +1,6 @@
-<%if(typeof options == 'object' && options[1]){%>
+<%if(typeof options == 'object' && options){%>
   <img id="bkgrdImage" class="okImg"src="<%=options[1].imgName%>">
-  <%}else if(data[3]){%>
+
     <%}else{%>
     <video  autoplay muted loop id="bkgrdImage" class="okImg"src="/images/rainbow_animation.mp4" alt="W2 Marketing Greeley, CO"></video>
   <%}%>
