dynamic linking going on here

--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -37,7 +37,10 @@
                 <option value="<%= data[1][i]._id%>|<%= data[1][i].companyName%>">  <%= data[1][i].companyName%></option>
                 <%}%>
             </select>
-  
+            <h2>Add a Message</h2>
+  <textarea name="invoiceMessage">
+
+  </textarea>
 
  
         
