--- a/views/config/head.ejs
+++ b/views/config/head.ejs
@@ -2,7 +2,7 @@
     <script>0</script>
     <link rel="shortcut icon" type="image/png"href="/images/logoW2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/stylesheets/sook/style.css">
+<link rel="stylesheet" href="/stylesheets/<%=directory%>/style.css">
 
 <!--GOOGLE-->
 <meta name="google-site-verification" content="Pvp74_YXTw6uwsBP-6pTFmbwnjXD7_zXP-WUG4FpWU8" />
