--- a/views/invoiceViewer.ejs
+++ b/views/invoiceViewer.ejs
@@ -12,7 +12,7 @@
   
   <div id="backgroundFX">    
       
-      <h1 class="h1Span">W2 Marketing Invoice</h1>
+      <h1 class="h1Span"><%=options[0].companyName%> Invoice</h1>
 
       <div class="eventBody">
         <h3>date: <%=new Date(data[2].date).toDateString()%><br></h3>
@@ -26,6 +26,7 @@
           invoice number: tbd<br>
       </h2>
        <div class="eventBody">
+         <strong>service details:</strong><br>
        <% for(let i =0;i<data[0].length;i++){%>
         <table>
    <tr>
@@ -35,12 +36,16 @@
   </tr>
   
   </table>
-  <strong>service details:</strong><br>
-    <%=data[0][i].serviceDetail%>
+    <%=data[0][i].serviceDetails%>
     <%}%>
   </div>
 
 </div>
+<% if(typeof data[2] == 'object' && data[2]){%>
+  <div class="eventBody">
+ <%=data[2].invData.invoiceMessage%>
+</div>
+<%}%>
   <div class="eventBody">
     <!--SERVICE DETAILS AND PAYMENT LINKS WITH QR CODE-->
     <p><strong>Payment Policy Update:</strong> all invoices will be due 15 days after the invoice date. If payment is not received within 30 days of the invoice date, we will add a 1.5% late fee per 30 days to the outstanding balance.</p>
@@ -48,11 +53,11 @@
     <div class="eventBody">
     <p>We offer the following payment options:</p>
     <ul>
-        <li>Mail by check: Payable to UPDATE QUERY SCOTT, c/o: UPDATE QUERY SCOTT, Mail to: 1536 14th AVE ~ Greeley, CO 80631</li>
-        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to:UPDATE QUERY SCOTT</li>
+        <li>Mail by check: Payable to <%=options[0].companyName%>, c/o: <%=options[0].companyContact%>, Mail to: <%=options[0].companyAddress%></li>
+        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to:<%=options[0].paypalEmail%></li>
     </ul>
-    <p>if you have any questions abour invoicing, payment, or you may have seen a bug in this new service, all feedback helps, please let me know!! -scott</p>
-    <p>"version": "1.0.9"</p>
+    <p>if you have any questions abour invoicing, payment, or you may have seen a bug in this new service, all feedback helps, please let us know!!</p>
+    <p>"version": "1.1.0"</p>
   </div>
 
      </div>   
