--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                         <h3>$<%=data[1][i].cost%>.00</h3>
                     </div>
                     <div class="imgCont">
-                           <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
+                           <a onclick="loading('getting product details')" href="/market/productID/<%= data[1][i]._id%>"> 
                          <img class="invImg" src=" <%= data[1][i].imgName%>" alt="">
                         </a>
                        </div>
