--- a/views/config/bkgdImg.ejs
+++ b/views/config/bkgdImg.ejs
@@ -1,5 +1,5 @@
 <%if(typeof options == 'object' && options){%>
-  <img id="bkgrdImage" class="okImg"src="<%=options[1].imgName%>">
+  <img id="bkgrdImage" class="okImg"src="<%=options[3][1].imgName%>">
 
     <%}else{%>
     <video  autoplay muted loop id="bkgrdImage" class="okImg"src="/images/rainbow_animation.mp4" alt="W2 Marketing Greeley, CO"></video>
