--- a/views/config/adminNav.ejs
+++ b/views/config/adminNav.ejs
@@ -1,5 +1,15 @@
-<a onclick="goBack()"><div class="navBox">go back</div></a>
+<div class="eventBody">
+<h2>admin navigation</h2>
 <a href="/admin"><div class="navBox">go to admin</div></a>
-<a href="/inventory"><div class="navBox">update inventory</div></a>
-<a href="/options"><div class="navBox">update options</div></a>
+<a href="/options"><div class="navBox">options</div></a>
+<a href="/services"><div class="navBox">services</div></a>
+<a href="/accounts"><div class="navBox">accounts</div></a>
+<a href="/invoice"><div class="navBox">invoice</div></a>
+</div>
+<br>
+<br>
+<div class="eventBody">
+<h2>Live Views</h2>
 <a href="/market"><div class="navBox">view market</div></a>
+<a href="/"><div class="navBox">view homepage</div></a>
+</div>
